@@ -8,6 +8,7 @@ Work In Progress:
 . (kfsone) Deleted/Deprecated keys in .csv files are now warnings with "-i",
 . (kfsone) command names can now be partial, e.g. "loc" for "local",
            "ra", "rar" or "rare" for "rares"
+. (kfsone) Show stationLS and pad size in rares display
 
 v6.4.0 Jan 01 2015
 . (kfsone) Added "rare" sub-command,
